# zspace_alice2

./: .gitignore  readme.md
alice2/: CMakeLists.txt  build.bat  run.bat
alice2/depends/stb/: stb_image_resize2.h
alice2/include/: alice2.h
alice2/src/ML/: AutoDecoderTrainer.cpp  AutoDecoderTrainer.h  AutoDecoderTrainerCUDA.cu  AutoDecoderTrainerCUDA.h  CUDAUtils.h  LatentSDF.cu  LatentSDF.h  MLPComputeContext.cpp  MLPComputeContext.h  genericMLP.h  polygonSDF_MLP.h
alice2/src/ML/DeepSDF/: FieldViewer.h  LatentNavigator_CUDA.cu  LatentNavigator_CUDA.h  LatentSDF_CPU.h  LatentSDF_CUDA.cu  LatentSDF_CUDA.h  TrainingDataSet.h
alice2/src/computeGeom/: ComputeMesh.cpp  ComputeMesh.h  ScalarField3D.cpp  ScalarField3D.h  scalarField.cpp  scalarField.h  scalarField_gpu.cpp  scalarField_gpu.h
alice2/src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  Transform.h
alice2/src/input/: CameraController.cpp  CameraController.h
alice2/src/objects/: GraphObject.cpp  GraphObject.h  MeshObject.cpp  MeshObject.h  SceneObject.cpp  SceneObject.h
alice2/src/shaders/: mesh.frag  mesh.vert  scalar_field_gpu_circle.comp  scalar_field_gpu_clear.comp  scalar_field_gpu_ops.comp  scalar_field_ops.comp  wireframe.frag  wireframe.vert
alice2/src/sketches/: ISketch.h  SketchManager.cpp  UserSketch.h
alice2/src/utils/: OpenGL.h  Vector.h
alice2/userSrc/: README_ScalarField_Educational_Series.md  genericMLP.h  scalarField.h  sketch_MLP.cpp  sketch_autoDecoder.cpp  sketch_autodecoder_cuda_parity.cpp  sketch_base.cpp  sketch_camera.cpp  sketch_eigen_json_demo.cpp  sketch_empty.cpp  sketch_field3d.cpp  sketch_geometry.cpp  sketch_gpu.cpp  sketch_heGraph.cpp  sketch_heMesh.cpp  sketch_mesh.cpp  sketch_mesh_simple.cpp  sketch_particles.cpp  sketch_scalarField.cpp  sketch_scalarFieldSimple.cpp  sketch_scalarField_01_basic.cpp  sketch_scalarField_02_boolean.cpp  sketch_scalarField_03_blending.cpp  sketch_scalarField_04_directional.cpp  sketch_scalarField_05_towerSet.cpp  sketch_sdf_basic.cpp  sketch_sdf_stack.cpp  sketch_voronoi.cpp
alice2/userSrc/MLP/: MLP_zSpace_Alice2.md  README (1).md  sketch_MLP.cpp
alice2/userSrc/base/: sketch_base.cpp  sketch_empty.cpp  sketch_geometry.cpp  sketch_particles.cpp  sketch_ui.cpp
alice2/userSrc/field/: sdf_zSpace_alice2.md  sketch_bezier.cpp  sketch_field_gpu.cpp  sketch_scalarFieldSimple.cpp  sketch_scalarField_01_basic.cpp  sketch_scalarField_02_boolean.cpp  sketch_scalarField_03_blending.cpp  sketch_scalarField_04_directional.cpp  sketch_scalarField_05_towerSet.cpp  sketch_sdf_basic.cpp  sketch_voronoi.cpp
alice2/userSrc/json/: sketch_eigen_json_demo.cpp
alice2/userSrc/latentSDF/: sketch_latentSDF_CPU.cpp  sketch_latentSDF_CPU_batched.cpp  sketch_latentSDF_CUDA.cpp  sketch_latentSDF_DF.cpp  sketch_latentSDF_Navigator_CUDA.cpp
alice2/userSrc/latentSDF/doc/: LalentAutoDecoder_batched.md  LatentAutoDecoder.md  LatentAutoDecoder_CUDA.md
